# TechStart-Projects

./: README.md
atv1/: cadastro.py
atv2/: categorias.py
atv3/: console.py  web.py
atv4/: console.py  marketplaces.py  web.py
atv4/backend/dados/: categories.txt  subcategories.txt
atv4/calculadoraweb/: calculadoramaykon.py  main.py  web.py
atv4/dados/: categorias.txt  categories.txt  marketplaces.txt  subcategorias.txt
atv4/frontend/marketplaces/: console.py  marketplaces.py  web.py
atv4/frontend/marketplaces/static/: style.css
atv4/frontend/marketplaces/templates/: index.html  subcategory.html
atv4/marketplaces/: console.py  main.py  marketplaces.py  web.py
atv4/marketplaces/static/: style.css
atv4/marketplaces/templates/: category.html  index.html  subcategory.html  template.html
atv4/templates/: category.html  index.html  template.html
calculadora-drf/: metas.txt  pyproject.toml
calculadora-drf/calc/: test_quesia.py  tools.py
calculadora-drf/calculadora/calculadora/: asgi.py  settings.py  urls.py  wsgi.py
