[tool.poetry]
name = "calculadora-drf"
version = "0.1.0"
description = ""
authors = ["Quesia Santos <quesiasts@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
